# text-data-course

./: .buildinfo  .gitignore  .jupytext  env-base.yaml  env-deploy.yaml  env.yaml  genindex.html  home.html  intro.html  objects.inv  pyproject.toml  search.html  searchindex.js  syllabus.html  tools.html  yq.sh
.dvc/: config
.github/workflows/: deploy-gh-pages.yml
00-introduction/: intro.html  references.html  syllabus.html  tools-01env.html  tools-02ops.html  tools-03sci.html  tools.html
01-assumptions/: 00-overview.html  01-finding-content-nb.html  01-rules-nb.html  02-rules-nb.html  data-02-vecsem-nb.html  data.html  intent-01-keywords-nb.html  intent-02-rules-er-nb.html  intent.html  overview.html
02-goals-approach/: overview.html  presentation-test-nb.html  supervised.html  unsupervised-01-reduction-nb.html  unsupervised-02-clustertopics-nb.html  unsupervised.html
03-measure-evaluate/: measuring-up.html  notebooks-nb.html  overview.html  translator.html
04-validation/: trouble.html
_sources/: home.md  syllabus.md  tools.md
_sources/00-introduction/: intro.md  tools-01env.md  tools-02ops.md  tools-03sci.md  tools.md
_sources/01-assumptions/: 00-overview.md  01-finding-content-nb.md  01-rules-nb.ipynb  01-rules-nb.md  02-rules-nb.ipynb  02-rules-nb.md  data-02-vecsem-nb.md  data.md  intent-01-keywords-nb.ipynb  intent-01-keywords-nb.md  intent-02-rules-er-nb.ipynb  intent-02-rules-er-nb.md  overview.md
_sources/02-goals-approach/: overview.md  presentation-test-nb.ipynb  unsupervised.md
_sources/04-validation/: trouble.md
_static/: mana.css
appendix/: datasets.html  tutorials.html
assumptions/: markdown.html
content/: Presentation Test.md  _config.yml  _toc.yml  home.md  intro.md  notebooks.md  references.bib  syllabus.md  tools.md
goals-approach/: Presentation Test.html
measure-evaluate/: notebooks.html
validation/: trouble.html
(+64 files in other folders)
