[tool.poetry]
name = "tlp"
version = "0.1.2"
description = "utility api for text-as-data course"
authors = ["Rachael <rachaeltsexton@gmail.com>"]
license = "MIT"
include = [".dvc/config"]

[tool.poetry.dependencies]
python = "^3.10"
toolz = "^0.11.2"
pandera = "^0.8.0"
pyjanitor = "^0.22.0"

[tool.poetry.group.docs.dependencies]
jupyter-book = "^0.15.1"
sphinxcontrib-mermaid = "^0.9.2"
spacy = "^3.5.4"
nltk = "^3.8.1"
coconut = "^3.0.2"
hvplot = "^0.8.4"
matplotlib = "^3.7.1"
wordcloud = "^1.9.2"
seaborn = "^0.12.2"
llvmlite = "^0.40.1"
graphviz = "^0.20.1"
panel = "^1.1.1"
scikit-image = "^0.21.0"
networkx = "^3.1"
umap-learn = "^0.5.3"
scikit-learn = "^1.2.2"
docutils = "<0.18"
jupyter-server = "<2"
dvc = "^3.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
